--- a/app/views/custom/pages/projekt_footer/budget/_my_ballot.html.erb
+++ b/app/views/custom/pages/projekt_footer/budget/_my_ballot.html.erb
@@ -38,5 +38,10 @@
         ) %>
       <% end %>
     </ul>
+
+    <%= link_to t("budgets.investments.header.check_ballot"),
+                  budget_ballot_path(@budget),
+                  class: "button hollow expanded" %>
+
   </div>
 <% end %>
