--- a/app/assets/stylesheets/_custom_settings.scss
+++ b/app/assets/stylesheets/_custom_settings.scss
@@ -1,5 +1,5 @@
 // brand_color
-$brand:                                           #004a83 !default;
+$brand:                                           #203d59 !default;
 $brand-secondary:                                 #002d50 !default;
 $secondary:                                       lighten($brand, 70%);
 $accent:                                          lighten($brand, 50%);
