--- a/app/components/budgets/investments/ballot_component.html.erb
+++ b/app/components/budgets/investments/ballot_component.html.erb
@@ -25,9 +25,15 @@
           <%= t("budgets.ballots.show.remove") %>
         <% end %>
         <% unless current_user.level_three_verified? %>
-          <div class='callout warning'>
-            <%= t("custom.budgets.investments.investment.unverified_note") %>
-          </div>
+          <% if current_user.unique_stamp.present? %>
+            <div class='callout warning'>
+              <%= t("custom.budgets.investments.investment.unverified_note") %>
+            </div>
+          <% else %>
+            <div class='callout warning'>
+              <%= t("custom.budgets.investments.investment.unverified_note_no_data_html", verify_account: link_to_verify_account) %>
+            </div>
+          <% end  %>
         <% end %>
       <% end %>
     </div>
