--- a/app/views/custom/pages/projekt_footer/budget/_investments.html.erb
+++ b/app/views/custom/pages/projekt_footer/budget/_investments.html.erb
@@ -16,4 +16,4 @@
              ballot: @ballot %>
 <% end %>
 
-<%= paginate @investments %>
+<%= paginate @investments, remote: true, params: { controller: 'pages', action: 'budget_phase_footer_tab' } %>
