--- a/app/views/custom/pages/projekt_footer/budget/_investments.html.erb
+++ b/app/views/custom/pages/projekt_footer/budget/_investments.html.erb
@@ -2,8 +2,8 @@
   <div class='column small'>
     <% if extended_feature?('modulewide.show_number_of_entries_in_modules') %>
       <div class='float-right'>
-        <%= @investments.except(:limit, :offset).unscope(:group).count %>
-        <%= t('activerecord.models.budget/investment', count: @investments.except(:limit, :offset).count) %>
+        <%= @investments.to_a.size %>
+        <%= t('activerecord.models.budget/investment', count: @investments.count) %>
       </div>
     <% end %>
   </div>
@@ -15,5 +15,3 @@
              investment_ids: @investment_ids,
              ballot: @ballot %>
 <% end %>
-
-<%= paginate @investments, remote: true, params: { controller: 'pages', action: 'budget_phase_footer_tab' } %>
