--- a/app/components/shared/order_links_component.html.erb
+++ b/app/components/shared/order_links_component.html.erb
@@ -4,6 +4,7 @@
       <%= link_to link_path(order),
         class: html_class(order),
         title: title_for(order),
+        filter: params[:filter],
         remote: (controller_name == 'pages'),
         onclick: (controller_name == 'pages' ? '$(".spinner-placeholder").addClass("show-loader")' : '') do %>
         <%= content_tag tag_name(order), link_text(order) %>
