--- a/app/components/shared/order_links_component.html.erb
+++ b/app/components/shared/order_links_component.html.erb
@@ -2,9 +2,9 @@
   <% valid_orders.each do |order| %>
     <li class="inline-block">
       <%= link_to link_path(order),
-        class: html_class(order),
+        class: "#{html_class(order)} js-remote-link-push-state",
         title: title_for(order),
-        filter: params[:filter],
+        "data-footer-tab-back-url": footer_tab_back_button_url,
         remote: (controller_name == 'pages'),
         onclick: (controller_name == 'pages' ? '$(".spinner-placeholder").addClass("show-loader")' : '') do %>
         <%= content_tag tag_name(order), link_text(order) %>
