--- a/app/components/shared/order_links_component.html.erb
+++ b/app/components/shared/order_links_component.html.erb
@@ -4,7 +4,7 @@
       <%= link_to link_path(order),
         class: "#{html_class(order)} js-remote-link-push-state",
         title: title_for(order),
-        "data-footer-tab-back-url": footer_tab_back_button_url,
+        "data-footer-tab-back-url": footer_tab_back_button_url(order),
         remote: (controller_name == 'pages'),
         onclick: (controller_name == 'pages' ? '$(".spinner-placeholder").addClass("show-loader")' : '') do %>
         <%= content_tag tag_name(order), link_text(order) %>
