--- a/app/views/custom/users/registrations/user_details.html.erb
+++ b/app/views/custom/users/registrations/user_details.html.erb
@@ -30,6 +30,11 @@
   <% if @user.citizen? %>
     <div class="row">
       <div class="small-12 column">
+        <%= f.text_field :plz, placeholder: t("custom.sign_up.user_details.plz_placeholder")  %>
+      </div>
+    </div>
+    <div class="row">
+      <div class="small-12 column">
         <%= f.select :bam_street_id, BamStreet.all.map{ |str| [str.name, str.id]  }, { prompt: t('helpers.select.prompt') } %>
       </div>
     </div>
