--- a/app/views/custom/shared/_subnavigation_konto.html.erb
+++ b/app/views/custom/shared/_subnavigation_konto.html.erb
@@ -1,15 +1,19 @@
-<li class="nav-element top-level-item js-access-top-level-menu js-prevent-key-scroll"
+<li class="nav-element main-navigation-item-account--wrapper top-level-item js-access-top-level-menu js-prevent-key-scroll"
     aria-label='<%= t('custom.links.menu.konto_icon') if placement == "desktop" %>'
     aria-expanded="false"
     <%= "aria-haspopup=true'" if placement == 'desktop' %>
     <%= "tabindex=0" if placement == 'desktop' %>
   >
 
-  <%= link_to account_path, class: 'account-items-icon', tabindex: "-1", aria: { hidden: true } do %>
-    <span class="icon-account" aria-hidden="true"
-          title="<%= t("custom.layouts.header.account_link") %>"
-          aria-label="<%= t("custom.layouts.header.account_link") %>">
-    </span>
+  <%= link_to account_path, class: 'account-items-icon main-navigation-item-user-account', tabindex: "-1", aria: { hidden: true } do %>
+    <div
+      class="main-navigation-item--account--image-wrapper"
+      aria-hidden="true"
+      title="<%= t("custom.layouts.header.account_link") %>"
+      aria-label="<%= t("custom.layouts.header.account_link") %>"
+    >
+    <%= current_user&.first_name&.chars&.first&.capitalize %>
+    </div>
   <% end %>
 
   <% if placement == 'mobile' %>
