--- a/app/assets/stylesheets/custom/menu.scss
+++ b/app/assets/stylesheets/custom/menu.scss
@@ -17,7 +17,7 @@ body > header .locale.locale-custom,
     label {
       color: $dark
     }
-  
+
     .locale-switcher {
 
       &:focus {
@@ -92,9 +92,8 @@ span.icon-no-notification,
 span.icon-home,
 span.icon-admin,
 span.icon-account {
-
   &:before {
-    font-size: 20px;
+    font-size: 24px;
   }
 }
 
@@ -105,10 +104,10 @@ span.icon-account {
 .icon-admin::before {
   content: "\f013";
 }
-
-.icon-account::before {
-  content: "\f2bd";
-}
+//
+// .icon-account::before {
+//   content: "\f2bd";
+// }
 
 .subnavigation a.home-items-icon {
   display: none;
@@ -120,7 +119,7 @@ span.icon-account {
 
 .account-admin-items {
   li#notifications {
-    margin-right: 0;
+    // margin-right: 0;
   }
 
   a {
@@ -256,10 +255,6 @@ span.icon-account {
     display: none !important;
   }
 
-  #navigation_bar {
-    background-color: $top-level-menu-background-color;
-  }
-
   .subnavigation a.home-items-icon {
     display: inline-block;
     width: 20px;
@@ -275,6 +270,8 @@ span.icon-account {
     display: flex;
     margin-left: 0;
     padding-bottom: 0;
+    height: 60px;
+    align-items: center;
 
     .content-items {
       flex-grow: 1;
@@ -330,11 +327,10 @@ span.icon-account {
 
 
   //  Height of the top menu
-  
+
   #navigation_bar .top-level-item > a,
   #navigation_bar .top-level-item > .flyout-item-name > a,
-  #navigation_bar .top-level-item > .flyout-item-name,
-  .subnavigation a {
+  #navigation_bar .top-level-item > .flyout-item-name, .subnavigation a {
     line-height: 3rem;
     font-weight: normal;
   }
@@ -437,23 +433,23 @@ span.icon-account {
   }
 
 
-  // Styling notification 
+  // Styling notification
 
   .account-admin-items {
     li#notifications {
-      margin-right: 0;
-      margin-left: 1.5rem;
-      width: 22px;
-      line-height: normal;
+      // margin-right: 0;
+      // margin-left: 1.5rem;
+      // width: 22px;
+      // line-height: normal;
 
       a.notifications {
-        position: absolute;
-        height: 100%;
-        width: 22px;
+        // height: 100%;
+        // width: 22px;
       }
 
       span.icon-notification {
-          position: absolute;
+          // position: absolute;
+          position: relative;
           font-size: 1.5rem;
       }
 
@@ -472,4 +468,117 @@ span.icon-account {
 .subnavigation a {
   padding-top: 0;
   padding-bottom: 0;
+}
+
+
+body {
+  font-family: "Asap", "sourcesanspro-regular-webfont", "sourcesanspro-bold-webfont", "PT_Serif_Web-Regular", sans-serif !important;
+}
+
+body > header, .wrapper > header {
+  height: 131px;
+  max-width: auto;
+}
+
+.top-bar {
+  height: 131px;
+  display: flex;
+  justify-content: flex-start !important;
+}
+
+.top-bar .top-bar-title a img {
+  max-height: 60px;
+  max-width: 60px;
+}
+
+.top-bar .top-bar-title {
+  flex-grow: initial;
+}
+
+.header--navigation {
+  margin-left: 55px;
+  height: 60px;
+
+  .content-items {
+    .nav-element {
+      color: black !important;
+      margin-right: 45px;
+      font-size: 24px;
+      font-weight: 500;
+    }
+  }
+}
+
+.subnavigation ul.main-menu .projekt-name, .subnavigation ul.main-menu li.nav-element a {
+  color: black;
+}
+
+.subnavigation {
+  width: 100%;
+}
+
+.subnavigation ul li {
+  margin-right: 0;
+}
+
+.user-notification-badge--wrapper {
+  position: relative;
+  width: 50px;
+  margin-left: 0;
+  width: 42px;
+  line-height: normal;
+}
+
+.user-notification--count {
+  position: absolute;
+  font-size: 14px;
+  bottom: 11px;
+  right: -32px;
+  display: inline-block;
+  width: 35px;
+  height: 26px;
+  // margin-right: 15px;
+}
+
+.account-admin-items .top-level-item {
+  padding-right: 0;
+}
+
+.locale .locale-form select {
+  border-radius: 11px;
+  padding-left: 12px;
+  padding-right: calc(8px + 1em);
+}
+
+.locale.locale-custom {
+  margin-right: 25px;
+}
+
+.locale .locale-form::after {
+  right: 7px;
+}
+
+.main-navigation-item-account--wrapper {
+  padding-left: 0 !important;
+  margin-left: 35px;
+  width: 50px !important;
+  height: 50px !important;
+}
+
+.main-navigation-item-user-account {
+  width: 50px;
+  height: 50px;
+  display: block;
+}
+
+.main-navigation-item--account--image-wrapper {
+  width: 50px !important;
+  height: 50px !important;
+  background: black;
+  color: white;
+  border-radius: 50%;
+  display: flex;
+  font-size: 30px;
+  justify-content: center;
+  align-items: center;
 }
