--- a/app/assets/stylesheets/custom/layout.scss
+++ b/app/assets/stylesheets/custom/layout.scss
@@ -212,7 +212,48 @@ ul.tabs li.tabs-title {
 
 @media screen and (min-width: 75em) {
   body.public {
-    margin-left: calc(40vw - 37.5rem);
-    margin-right: calc(40vw - 37.5rem);
+    margin-left: 0;
+    margin-right: 0;
   }
+}
+
+@media screen and (min-width: 75em) {
+  body > .wrapper, .footer, header .top-bar {
+    // margin-left: calc(40vw - 37.5rem);
+    // margin-right: calc(40vw - 37.5rem);
+    max-width: 1470px;
+    margin: auto;
+  }
+}
+
+header {
+  padding: 0;
+  background: white !important;
+}
+
+html {
+  font-size: 18px;
+}
+
+h2 {
+  font-weight: 500;
+  font-size: 42px;
+}
+
+.card-section {
+  background: white;
+  border-radius: 10px;
+  padding: 40px 32px;
+  // border: 1px solid #D9D9D9;
+  border: 1px solid #d9d9d9b3;
+  margin-bottom: 15px;
+}
+
+.card-section--header-title {
+  font-size: 22px;
+}
+
+.card-section--body {
+  color: #67788A;
+  font-size: 18px;
 }
