--- a/app/assets/stylesheets/custom/menu.scss
+++ b/app/assets/stylesheets/custom/menu.scss
@@ -35,6 +35,7 @@ body > header .locale.locale-custom,
     border-bottom: 1px solid currentColor;
     padding-bottom: 0.5rem;
     margin: 1rem;
+    font-size: 1.1rem;
   }
 
   .subnavigation ul.main-menu {
