--- a/app/assets/stylesheets/custom_design_v2/base.scss
+++ b/app/assets/stylesheets/custom_design_v2/base.scss
@@ -433,7 +433,7 @@ p {
 .resource-item--footer {
   display: flex;
   justify-content: center;
-  height: 100%;
+  height: 80px;
 
   .button {
     margin-bottom: 0;
