--- a/app/views/custom/debates/show.html.erb
+++ b/app/views/custom/debates/show.html.erb
@@ -48,7 +48,7 @@
         </div>
 
         <div id="<%= dom_id(@debate) %>" class="row">
-          <div class="small-12 medium-9 column">
+          <div class="small-12 medium-9 column text-content">
             <% if @debate.conflictive? %>
               <div data-alert class="callout alert margin-top">
                 <strong><%= t("debates.show.flag") %></strong>
