--- a/app/views/custom/proposals/show.html.erb
+++ b/app/views/custom/proposals/show.html.erb
@@ -62,7 +62,7 @@
       </div>
 
       <div id="<%= dom_id(@proposal) %>" class="row">
-        <div class="small-12 medium-9 column">
+        <div class="small-12 medium-9 column text-content">
           <% if @proposal.retired? %>
             <div data-alert class="callout alert margin-bottom proposal-retired">
               <strong>
