--- a/app/views/custom/welcome/index.html.erb
+++ b/app/views/custom/welcome/index.html.erb
@@ -15,7 +15,7 @@
   <%= render "header", header: @header %>
 
   <div class="row">
-    <div class="column medium-9 small-centered">
+    <div class="column medium-9 small-centered text-content">
       <%= render_custom_block 'home_page_1' %>
     </div>
   </div>
@@ -33,7 +33,7 @@
   <% end %>
 
   <div class="row">
-    <div class="column medium-9 small-centered">
+    <div class="column medium-9 small-centered text-content">
       <%= render_custom_block 'home_page_2' %>
     </div>
   </div>
@@ -47,7 +47,7 @@
   <% end %>
 
   <div class="row">
-    <div class="column medium-9 small-centered">
+    <div class="column medium-9 small-centered text-content">
       <%= render_custom_block 'home_page_3' %>
     </div>
   </div>
@@ -62,7 +62,7 @@
   <% end %>
 
   <div class="row">
-    <div class="column medium-9 small-centered">
+    <div class="column medium-9 small-centered text-content">
       <%=render_custom_block 'home_page_4' %>
     </div>
   </div>
@@ -77,7 +77,7 @@
   <% end %>
 
   <div class="row">
-    <div class="column medium-9 small-centered">
+    <div class="column medium-9 small-centered text-content">
       <%=render_custom_block 'home_page_5' %>
     </div>
   </div>
@@ -91,7 +91,7 @@
   <% end %>
 
   <div class="row">
-    <div class="column medium-9 small-centered">
+    <div class="column medium-9 small-centered text-content">
       <%=render_custom_block 'home_page_6' %>
     </div>
   </div>
