--- a/app/assets/stylesheets/custom/cli_osn.scss
+++ b/app/assets/stylesheets/custom/cli_osn.scss
@@ -1,3 +1,13 @@
+h5 {
+  font-size: 18px;
+}
+
+.text-content a {
+  font-weight: bold;
+  color: #32837d;
+  text-decoration: underline;
+}
+
 .erste-schritte {
   background-color: $accent;
   padding-left: 10px;
