--- a/app/views/custom/budgets/investments/_investment_show.html.erb
+++ b/app/views/custom/budgets/investments/_investment_show.html.erb
@@ -20,7 +20,7 @@
   </div>
 
   <div class="row">
-    <div class="small-12 medium-9 column">
+    <div class="small-12 medium-9 column text-content">
       <%= render "/budgets/investments/investment_detail", investment: investment %>
     </div>
 
