--- a/app/views/custom/deficiency_reports/show.html.erb
+++ b/app/views/custom/deficiency_reports/show.html.erb
@@ -38,7 +38,7 @@
       </div>
 
       <div id="<%= dom_id(@deficiency_report) %>" class="row">
-        <div class="small-12 medium-9 column deficinecy-report-show-main-column">
+        <div class="small-12 medium-9 column deficinecy-report-show-main-column text-content">
 
           <%= render "deficiency_reports/info", deficiency_report: @deficiency_report %>
 
